Fix navbar spacing for phone screens

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -366,10 +366,11 @@
   }
 
   .navbar.open {
-    display: flex;
+    display: flex !important;
   }
+
   .navbar.closed {
-    display: none;
+    display: none !important;
   }
 
   .navbar {
